Fix unreadable version info in mobile menu

--- a/app/javascript/entrypoints/application.css
+++ b/app/javascript/entrypoints/application.css
@@ -48,7 +48,7 @@ body.active-tippy * {
   @apply pointer-events-none;
 }
 
-code {
+#modal code {
   @apply rounded bg-slate-100 px-1 py-px;
 }
 
